//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Profile {
  id String [pk]
  clerkId String [unique, not null]
  name String [not null]
  imageUrl String
  email String [unique, not null]
  servers Server [not null]
  members Member [not null]
  channels Channel [not null]
}

Table Server {
  id String [pk]
  name String [not null]
  imageUrl String
  inviteCode String [not null]
  profileId String [not null]
  profile Profile [not null]
  members Member [not null]
  channels Channel [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Member {
  id String [pk]
  role memberRole [not null, default: 'GUEST']
  profileId String [not null]
  profile Profile [not null]
  serverId String [not null]
  server Server [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Channel {
  id String [pk]
  name String [not null]
  type channelType [not null, default: 'TEXT']
  profileId String [not null]
  profile Profile [not null]
  serverId String [not null]
  server Server [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum memberRole {
  ADMIN
  MODERATOR
  GUEST
}

Enum channelType {
  TEXT
  AUDIO
  VIDEO
}

Ref: Server.profileId > Profile.id

Ref: Member.profileId > Profile.id

Ref: Member.serverId > Server.id

Ref: Channel.profileId > Profile.id

Ref: Channel.serverId > Server.id